Fixing body size on smaller screens 320px
Former-commit-id: 255011e5f46f07f457a840600891a0df084e3c3e [formerly 94785198bfb3bd8a974f3d77734a98514fe7f72c] [formerly 57e3dafd25ecab4eb2f3ae6a46800ab217e9d055 [formerly 0aa298770c3021983344694c2f67e7fa4e8448ef]] [formerly c49b9467f0bed34fe10b9cbe30586a9e8b3d48aa [formerly 42f90b5a307cde5d9ecb4dbe8b673e953ab2c2d7] [formerly b6c114bd44ef1fbd1197d44939772ccfcf804d1d [formerly f41af7c8cbd67755cd9e5680932541a5535ff777]]]
Former-commit-id: 43a223c943edd1afbf103b3544cfd7b9fd2c9bc3 [formerly 80f9e907f001b12145852c68528fd35de69e4c34] [formerly d23fdda71dc1623281d5f9f84e488542800f8153 [formerly 694bc1f29dcf421f32aaf0440e76dea65b39a614]]
Former-commit-id: 6df503c8069c1f8d3ed4621aefbd1159c60d3d6a [formerly 8e30c10d36f2e76446da4c533936f931973aaa97]
Former-commit-id: 54c93f8194dfd1747430ec855b965a2e33fad0ad

--- a/public/css/sass/partials/_media-queries.sass
+++ b/public/css/sass/partials/_media-queries.sass
@@ -3,9 +3,6 @@
 		height: 22vmax
 
 @media (max-width: 600px)
-	body
-		font-size: larger
-
 	.siteheader
 		height: 25vmax
 		max-height: 120px
