--- a/public/css/sass/partials/_variables.sass
+++ b/public/css/sass/partials/_variables.sass
@@ -1,7 +1,7 @@
 $blue: #3f70a2
 $lightblue: lighten($blue, 30%)
 $adblue: lighten($blue, 15%)
-$black: #555
+$black: #3b3b3b
 $darkgray: #999
 $gray: #ddd
 $lightgray: #eee
